<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authentication.NameSetupFragment">

    <TextView
        android:id="@+id/Signup_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/greetings"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="10dp"
        android:textColor="@color/app_theme_color"/>



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/template_container"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Signup_message"
        >
        <TextView
            android:id="@+id/template2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/template2"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="10dp"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>



    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/firstname"
        android:layout_width="0dp"
        android:visibility="visible"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/template_container"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/first_name"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="35dp"
        android:gravity="top"
        android:paddingBottom="25dp"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHorizontal_bias="0.05"
        android:autofillHints="First Name"
        android:inputType="text" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/lastname"
        android:visibility="visible"
        android:inputType="text"
        android:layout_width="0dp"
        android:hint="@string/last_name"
        android:paddingBottom="25dp"
        android:layout_marginTop="25dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.8"
        app:layout_constraintHorizontal_bias="0.05"
        android:autofillHints="Last Name" />

</androidx.constraintlayout.widget.ConstraintLayout>